--- a/.env
+++ b/.env
@@ -1,12 +1,12 @@
 APP_BACKEND_NAME=your_server
 CONTAINER_BACKEND_NAME=your_server
-PATH_BACKEND_NAME=server
+PATH_BACKEND_NAME=server # If you change it, change the folder name as well
 PORT_BACKEND=2501
 
 APP_NEXT_NAME=your_next
-BUILD_PATH_NEXT_NAME=next
+BUILD_PATH_NEXT_NAME=next # If you change it, change the folder name as well
 CONTAINER_NEXT_NAME=your_next
-PATH_NEXT_NAME=next/your_next
+PATH_NEXT_NAME=next/your_next  # If you change it, change the folder name as well
 PORT_NEXT=2502
 
 CONTAINER_DB_ADMIN=your_db_admin
@@ -18,7 +18,7 @@ PORT_DB=27016
 MONGO_ROOT_USERNAME=your_root
 MONGO_ROOT_PASSWORD=your_password
 
-DB_NAME=your
+DB_NAME=your_db
 DB_NAME_TEST=your_test
 
 SENTRY_EXPRESS=https://YOURSENTRY@sentry.io/
